# internal/oas/oas_request_encoders_gen.go
@@ -24,6 +24,20 @@ func encodeContextRequest(
 	return nil
 }
 
+func encodeFetchURLRequest(
+	req *FetchURLRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeGetFileRequest(
 	req *FileRequest,
 	r *http.Request,
