# internal/oas/oas_response_encoders_gen.go
@@ -25,6 +25,19 @@ func encodeContextResponse(response *ContextResponse, w http.ResponseWriter, spa
 	return nil
 }
 
+func encodeFetchURLResponse(response *FetchURLResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetFileResponse(response *FileResponse, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
