# internal/oas/oas_server_gen.go
@@ -14,6 +14,12 @@ type Handler interface {
 	//
 	// POST /context
 	Context(ctx context.Context, req *ContextRequest) (*ContextResponse, error)
+	// FetchURL implements fetchURL operation.
+	//
+	// Fetch a URL from an operator-approved site.
+	//
+	// POST /fetch
+	FetchURL(ctx context.Context, req *FetchURLRequest) (*FetchURLResponse, error)
 	// GetFile implements getFile operation.
 	//
 	// Retrieve actual file content from a source repository.
